refactored older code, and added comments. Added 2 lines in retrieveCityCoordinates function to save city searches in local storage

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             <button class="search-btn">Search</button>
             <div class="separator"></div>
         </div>
-
-        <ul class="search-history">
-            <!-- List will grow down as search history grows-->
-        </ul>
+        <div class="search-history">
+            <h2>Search History</h2>
+            <ul class="history-buttons"></ul>
+        </div>
+       
 
         <div class="weather-data">
             <div class="current-weather">
